deploy/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    inject-cloudflare: "true"
