deploy/base/db-seeder.yml
apiVersion: v1
kind: Service
metadata:
  name: db-seeder
  namespace: default
  labels:
    app: db-seeder
spec:
  ports:
    - name: db-seeder
      port: 80
      targetPort: 8032
      protocol: TCP
  selector:
    app: db-seeder
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-seeder
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-seeder
  template:
    metadata:
      labels:
        app: db-seeder
    spec:
      containers:
        - name: db-seeder
          image: rejdeboer/mmo-db-seeder:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8032
