deploy/base/game-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: game-server-metrics
  namespace: default
  labels:
    app: game-server-metrics
spec:
  selector:
    app: game-server
  ports:
    - name: default
      protocol: TCP
      port: 9000
      targetPort: 9000
