deploy/base/mmo-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mmo-server-metrics
  namespace: default
  labels:
    app: mmo-server-metrics
spec:
  selector:
    app: mmo-server
  ports:
    - name: http-metrics
      protocol: TCP
      port: 80
      targetPort: 80
