deploy/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: mmo.rejdeboer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 80
  tls:
    - hosts:
        - mmo.rejdeboer.com
      secretName: whoami-tls-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.rejdeboer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.rejdeboer.com
      secretName: whoami-tls-monitoring
