deploy/base/provisioner.yml
apiVersion: v1
kind: Service
metadata:
  name: mmo-provisioner
  namespace: default
  labels:
    app: mmo-provisioner
spec:
  ports:
    - name: mmo-provisioner
      port: 80
      targetPort: 8032
      protocol: TCP
  selector:
    app: mmo-provisioner
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mmo-provisioner
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mmo-provisioner
  template:
    metadata:
      labels:
        app: mmo-provisioner
    spec:
      containers:
        - name: mmo-provisioner
          image: rejdeboer/mmo-provisioner:main-74bc879-1763324722 # {"$imagepolicy": "flux-system:mmo-provisioner"}
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8032
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mmo-provisioner
  namespace: default
spec:
  # entryPoints:
  #   - websecure # Assumes you are using the 'websecure' entrypoint for HTTPS
  routes:
  - match: Host(`mmo-provisioner.homelab.io`)
    kind: Rule
    services:
    - name: mmo-provisioner
      port: 80
  # tls:
  #   certResolver: letsencrypt 
  #   domains:
  #   - main: "mmo-provisioner.homelab.io"
