deploy/base/vault-ingress.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: vault-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.52
    ports:
      - port: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: vault-external
  namespace: default
spec:
  ports:
    - port: 8200
      targetPort: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: vault.rejdeboer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-external
                port:
                  number: 8200
  tls:
    - hosts:
        - vault.rejdeboer.com
      secretName: vault-tls
